tests/ui/frontmatter/fence-unclosed-5.stderr
error: unclosed frontmatter
  --> $DIR/fence-unclosed-5.rs:1:1
   |
LL | / ----cargo
...  |
LL | |
   | |_^
   |
note: frontmatter opening here was not closed
  --> $DIR/fence-unclosed-5.rs:1:1
   |
LL | ----cargo
   | ^^^^

error: aborting due to 1 previous error

